# tree-sitter-klipper

./: Cargo.toml  binding.gyp  devshell.nix  flake.nix  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
